Fixing spacing

--- a/src/resources/elements/entry/entry.css
+++ b/src/resources/elements/entry/entry.css
@@ -1,6 +1,10 @@
 .entry-header {
   display: flex;
   vertical-align: middle;
+  margin-bottom: 0px;
+}
+.entry-header hgroup {
+  margin-bottom: 0px;
 }
 .entry-header-text {
   cursor: pointer;
